# tissue-clocks

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  justfile  pyproject.toml
figures/: Makefile  process.sh
metadata/: ecm_genes.json
src/: associate_age_gaps_factors.py  compare_dname_age.py  download_gtex_dbGAP_restricted.sh  download_gtex_dname.sh  download_slides.sh  explore_dname_feature_space.py  explore_histological_feature_space.py  explore_rna_feature_space.py  feature_extractor.job.sh  feature_extractor.py  feature_extractor.submit.py  interpret_age_gaps_across_tissues.py  interpret_age_gaps_pathology.blood.py  interpret_age_gaps_pathology.tissue.py  interpret_age_gaps_telomeres.blood.py  interpret_age_gaps_telomeres.tissue.py  interpret_age_gaps_text.py  interpret_age_gene_expression.py  ops.py  predict_dname_age.py  predict_gaps_from_blood_expression.py  predict_histological_age.py  prepare_archs4_data.py  supplementary_tables.py  train_fastai.py  train_fastai_metrics.py  train_fastai_post.py  train_fastai_pre.py  utils.py  validate_blood_predictors.py  variance_explained_factors.py  visualize_age_gaps.py  visualize_morbidities.py  visualize_pathology_data.py  visualize_sample_attributes.py  visualize_telomere_data.py
src/revision/: bland_altman.py  cohort_description_table.py  compare_dname-histology_morbidity.py  compare_dname-histology_pathology.py  compare_dname-histology_summary.py  compare_dname-histology_telomeres.py  compare_plip_conch.py  correlate_histology_dname.py  cross_apply_clocks.py  ecm_analysis.py  gnn.prepare_graphs.py  gnn.train.per_organ.py  gnn.train.py  icc_apply_clocks.py  icc_reproducibility.py  icc_sample_tiles.py  interpret_age_gaps_expression_redo.py  interpret_age_gaps_morbidity.tissue.imagenet.py  investigate_suicide.py  process_lz.py  (+11 more)
