[project]
name = "tissue-clocks"
version = "0.1.0"
description = "Histopathology of human aging to predict biological age and disease"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.3",
    "click>=8.1.8",
    "csbdeep>=0.8.1",
    "fastai>=2.8.6",
    "fastcluster>=1.2.6",
    "gseapy>=1.1.7",
    "h5py>=3.12.1",
    "imageio>=2.37.0",
    "ipython>=9.0.2",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "openslide-bin>=4.0.0.6",
    "openslide-python>=1.4.1",
    "pandas>=2.2.3",
    "parmap>=1.7.0",
    "pingouin>=0.5.5",
    "pymde>=0.1.18",
    "pytorch-lightning>=2.5.0.post0",
    "requests>=2.32.3",
    "scanpy>=1.10.4",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13",
    "seaborn-extensions>=0.2.1",
    "shapely>=2.0.6",
    "squidpy>=1.6.1",
    "stardist>=0.9.1",
    "statsmodels>=0.14.4",
    "tifffile>=2025.1.10",
    "torch>=2.0",
    "torchmetrics>=1.6.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "tqdm-loggable>=0.2",
    "urlpath>=1.2.0",
    "xgboost>=2.1.3",
    "zarr<3.0.0",
    "conch",
    "scikit-network>=0.33.3",
    "fancyimpute>=0.7.0",
    "einops>=0.8.1",
    "mvlearn>=0.4.1",
    "bs4>=0.0.2",
    "lxml>=6.0.1",
    "openpyxl>=3.1.5",
    "pandarallel>=1.6.5",
    "tenacity>=9.1.2",
    "marsilea>=0.5.6",
    "lazyslide>=0.9.4",
    "lightgbm>=4.6.0",
]

[tool.uv.sources]
conch = { git = "https://github.com/mahmoodlab/CONCH.git" }

[dependency-groups]
dev = [
    "fire>=0.7.0",
    "pyqt6>=6.9.1",
    "pyfzf>=0.3.1",
    "ipython>=9.4.0",
    "mypy>=1.18.2",
    "black>=25.9.0",
]
